--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   /* text-align: center; */
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
+  background-color: rgb(248 250 252);
 }
 
 .App-logo {
